samples/_failures_safe/1761728351_b865e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b38dcc48.c: In function ‘main’:
./samples/SAFE/__tmp_b38dcc48.c:164:5: error: expected expression at end of input
  164 |     size_t len =
      |     ^~~~~~
./samples/SAFE/__tmp_b38dcc48.c:164:5: error: expected declaration or statement at end of input
